--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "private": true,
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.4.0",
     "markdown-it-deflist": "^2.0.3",
-    "vuepress": "^0.10.2",
+    "markdown-it-imsize": "^2.0.1",
+    "vuepress": "^1.4.1",
+    "vuepress-plugin-medium-zoom": "^1.1.8",
     "vuepress-plugin-sitemap": "^1.1.1",
-    "vuepress-theme-craftdocs": "^1.2.0"
+    "vuepress-theme-craftdocs": "./../vuepress-theme-craftdocs/"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "docs:sitemap": "vuepress-sitemap -H https://docs.craftcms.com/tutorial/v3/"
+    "docs:sitemap": "vuepress-sitemap -H https://docs.craftcms.com/tutorial/"
   },
-  "dependencies": {
-    "markdown-it-imsize": "^2.0.1",
-    "vuex": "^3.1.3"
-  }
+  "dependencies": {}
 }
